# mutmut-experiments

./: .dockerignore  .mypy.ini  AUTHORS.rst  Dockerfile  README.rst  entrypoint.sh  pyproject.toml  setup.cfg
mutmut/: __init__.py  __main__.py  cache.py  config.py  context.py  coverage.py  debugging.py  do_run.py  mut_config_storage.py  mutate.py  mutations.py  parse.py  patch.py  process.py  project.py  setup_logging.py  status.py  utils.py
mutmut/cache/: cache.py  html.py  junitxml.py  model.py  print_results.py
src/: __init__.py  __main__.py  config.py  context.py  coverage.py  debugging.py  dir_context.py  do_run.py  dynamic_config_storage.py  mut_config_storage.py  mutate.py  mutation_test_runner.py  mutations.py  parse.py  patch.py  process.py  progress.py  project.py  setup_logging.py  shared.py  status.py  utils.py
src/cache/: cache.py  db_core.py  hash.py  html.py  junitxml.py  model.py  print_results.py  update_line_numbers.py
src/mutate/: __init__.py  dunder.py  mutate.py
src/mutation_test_runner/: __init__.py  check.py  constants.py  queue_mutants.py  run_mutation.py  runner.py  test_runner.py  types.py
src/mutations/: __init__.py  ast_pattern.py  mutations.py
src/reporters/: __init__.py  html.py  junitxml.py  print_results.py
src/storage/: __init__.py  dynamic_config_storage.py  project.py  storage.py
src/tools/: __init__.py  debugging.py  setup_logging.py
tests/: conftest.py  fixtures.py  fixtures_main.py  helpers.py  test_cache.py  test_init.py  test_main.py  test_mutation.py  test_mutmut_config_hooks.py
tests/extra_tests/: test_parallelize.py  test_project.py  test_timing.py
