[tool.poetry]
name = "mutmut-experiments"
version = "0.0.1"
description = "Experimentos con un fork del repositorio de mutmut."
authors = ["gulliver-madrid <49131885+gulliver-madrid@users.noreply.github.com>"]
license = "BSD-3-Clause license"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
glob2 = "^0.7"
parso = "^0.8.4"
click = "^8.1.7"
pony = "^0.7.17"
junit-xml = ">=1.8,<2"
toml = "^0.10.2"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
