[tool.poetry]
name = "mutmut-experiments"
version = "0.0.1"
description = "Experimentos con un fork del repositorio de mutmut."
authors = ["gulliver-madrid <49131885+gulliver-madrid@users.noreply.github.com>"]
license = "BSD-3-Clause license"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
glob2 = "^0.7"
parso = "^0.8.4"
click = "^8.1.7"
pony = "^0.7.17"
junit-xml = ">=1.9,<2"
toml = "^0.10.2"



[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
pytest-cov = "^5.0.0"
whatthepatch = "0.0.6"
coverage = "^7.4.4"
hammett = "^0.9.4"
mock = ">=2.0.0"
pony-stubs = "^0.5.2"
types-toml = "^0.10.8.20240310"
mypy = "^1.9.0"
typing-extensions = "^4.11.0"
types-whatthepatch = "^1.0.2.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
